Добавлены тесты для html_to_pdf. Добавлена функция для сравнения pdf Сделаны общие тест кейсы для cdn и api
